<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_audio_record"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="@string/audio_action_record"/>

    <Button
        android:id="@+id/btn_audio_action_play_audioTrack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="@string/audio_action_play_audioTrack"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_audio_action_play_audioTrack_left"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:text="@string/audio_action_play_audioTrack_left"/>

        <Button
            android:id="@+id/btn_audio_action_play_audioTrack_right"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:text="@string/audio_action_play_audioTrack_right"/>

    </LinearLayout>

    <Button
        android:id="@+id/btn_audio_action_play_MediaPlayer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="@string/audio_action_play_MediaPlayer"/>

    <!--<Button-->
        <!--android:id="@+id/btn_audio_action_play"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:textAllCaps="false"-->
        <!--android:text="@string/audio_action_play"/>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_audio_action_stop_audioTrack_left"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:text="@string/audio_action_stop_audioTrack_left"/>

        <Button
            android:id="@+id/btn_audio_action_stop_audioTrack_right"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:text="@string/audio_action_stop_audioTrack_right"/>

        <Button
            android:id="@+id/btn_audio_action_restore"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:text="@string/audio_action_restore"/>

    </LinearLayout>

    <com.cokus.wavelibrary.view.WaveSurfaceView
        android:id="@+id/wavesfv"
        android:layout_width="fill_parent"
        android:layout_height="120dp"/>

    <com.cokus.wavelibrary.view.WaveformView
        android:id="@+id/waveview"
        android:visibility="invisible"
        android:layout_width="fill_parent"
        android:layout_height="120dp" />

</LinearLayout>